--- a/index.html
+++ b/index.html
@@ -12,5 +12,9 @@
 
   <body>
     <h1>Welcome to YouMusic</h1>
+    <a
+      href="intent:#Intent;scheme=http;package=com.chinrust.freedoctor.free_doctor;end"
+      >click here</a
+    >
   </body>
 </html>
