--- a/index.html
+++ b/index.html
@@ -9,13 +9,6 @@
 
   <body>
     <h1>Welcome to YouMusic</h1>
-    <a
-      href="intent:#Intent;scheme=http;package=com.chinrust.freedoctor.free_doctor;end"
-      >click here</a
-    >
-    <a
-      href="intent:#Intent;scheme=http://open?url_param=hi santhosh;package=com.chinrust.star;S.browser_fallback_url=http%3A%2F%2Fzxing.org;end"
-      >click here</a
-    >
+    <a href="https://ch1nru5t.github.io/YouMusic/">click here</a>
   </body>
 </html>
